--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "firebase": "^10.1.0",
+    "firebaseui": "^6.0.2",
     "msw": "^1.2.3",
     "styled-components": "^6.0.5",
     "typescript": "^5.0.2",
