--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@ant-design/icons": "^5.2.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "antd": "^5.8.0",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "firebase": "^10.1.0",
-    "firebaseui": "^6.0.2",
     "msw": "^1.2.3",
+    "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
